# eximini-buddy

./: pyproject.toml
app/: main.py
app/api/auth/: routes.py  schemas.py
app/core/: config.py  email.py  security.py
app/db/: models.py  session.py
app/utils/: email_utils.py
